<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".FirstFragment">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/what_would_you_like_to_search_for_today">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/edit_text_item"
            android:layout_width="275dp"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/add_item">
        </EditText>
        <Button
            android:id="@+id/add_item_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:text="+">
        </Button>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_added_items"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginHorizontal="25dp">
    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/search_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/search">
    </Button>

</LinearLayout>